# trenino

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DESIGN.md  IMPLEMENTATION_PLAN_BUTTON_MAPPING.md  PRODUCT.md  README.md  mise.toml  mix.exs  test_analyzer.exs
.claude/: settings.local.json
.claude/commands/: release.md
.claude/skills/: lua-scripting.md  train-setup.md  trenino-mcp.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude-weekly-docs.yml  claude.yml  dependabot-analyzer.yml  nightly.yml  release.yml
.impeccable/: design.json
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: TSW_API_GUIDE.md  architecture.md  control_auto_suggestion.md  development.md  getting-started.md  hardware-setup.md  lever_input_mapping_architecture.md  lua-scripting.md  mcp-setup.md  train-configuration.md
docs/features/: bldc-levers.md
docs/plans/: 2026-02-01-mcp-server-design.md  2026-02-13-bldc-lever-design.md  2026-02-13-bldc-lever-implementation.md  2026-02-14-bldc-hardware-config-design.md  2026-02-14-bldc-hardware-config-plan.md  train_context.md
lib/: trenino.ex  trenino_web.ex
lib/trenino/: app_version.ex  application.ex  firmware.ex  hardware.ex  keyboard.ex  paths.ex  release.ex  repo.ex  settings.ex  simulator.ex  train.ex
scripts/: build-desktop.sh  build-macos.sh  update-version.sh
tauri/: package-lock.json  package.json
tauri/keystroke/: Cargo.toml
tauri/keystroke/src/: main.rs
test/: test_helper.exs
(+458 files in other folders)
